--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <a href="#work">Work</a>
       <a href="#services">Services</a>
       <a href="#about">About</a>
-      <a href="jobs">GNF for careers</a>
+      <a href="careers/careers.html">GNF for careers</a>
     </nav>
   </header>
 
