--- a/careers/careers.html
+++ b/careers/careers.html
@@ -11,7 +11,7 @@
 
 <header class="top">
   <h1>The GN Foundation</h1>
-  <a href="..index.html">← Back to Home</a>
+  <a href="../index.html">← Back to Home</a>
 </header>
 
 <section class="hero">
