--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header class="header fade-in">
     <div class="logo">The GN Foundation</div>
     <nav>
-      <a href="#work">Work</a>
+      <a href="work/work.html">Work</a>
       <a href="#services">Services</a>
       <a href="#about">About</a>
       <a href="careers/careers.html">GNF for careers</a>
